--- a/dev/converter_para_gpkg.ipynb
+++ b/dev/converter_para_gpkg.ipynb
@@ -2,31 +2,352 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
     "import os\n",
-    "os.chdir('/home/pedro/Documents/GIT_WORKSPACE/split_offdb/')"
+    "from sqlalchemy import create_engine, text\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf=gpd.read_parquet('/home/pedro/Documents/GIT_WORKSPACE/split_offdb/finais/split_gridspacing_0.5.parquet')\n"
+    "gdf.to_file('/home/pedro/Documents/GIT_WORKSPACE/split_offdb/dev/split_5555.gpkg', layer = 'input',  driver = 'gpkg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf.to_file('/home/pedro/Documents/GIT_WORKSPACE/split_offdb/finais/split_gridspacing_0.5.gpkg', driver = 'gpkg')"
+    "# Conexão com o banco de dados\n",
+    "db_url = \"postgresql+psycopg2://postgres:1Kakaroto*@localhost:5432/postgres\"\n",
+    "engine = create_engine(db_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Caminho base\n",
+    "base_path = '/home/pedro/Documents/GIT_WORKSPACE/split_offdb/outputs/'\n",
+    "\n",
+    "# Lista para armazenar os resultados\n",
+    "all_results = []\n",
+    "\n",
+    "# Loop pelos arquivos split_1.parquet até split_6242.parquet\n",
+    "for i in range(1, 2000):\n",
+    "    file_path = os.path.join(base_path, f\"split_{i}.parquet\")\n",
+    "    if os.path.exists(file_path):\n",
+    "        try:\n",
+    "            # Carregando o arquivo Parquet\n",
+    "            gdf = gpd.read_parquet(file_path)\n",
+    "            \n",
+    "            # Reprojetando para SIRGAS 2000 / UTM zone 23S (EPSG:31983)\n",
+    "            gdf = gdf.to_crs(epsg=31983)\n",
+    "            \n",
+    "            # Calculando a área em hectares\n",
+    "            gdf['area'] = gdf['geometry'].area / 10000  # Convertendo de m² para hectares\n",
+    "            \n",
+    "            # Contando o número de \"CARs\" por polígono\n",
+    "            gdf['num_cars'] = gdf['id_layer'].apply(lambda x: list(x).count(\"CAR\"))\n",
+    "            \n",
+    "            # Agrupando pela quantidade de CARs e somando as áreas\n",
+    "            result = gdf.groupby('num_cars')['area'].sum().reset_index()\n",
+    "            \n",
+    "            # Adicionando o número do arquivo como identificação\n",
+    "            result['file'] = i\n",
+    "            \n",
+    "            # Armazenando no resultado geral\n",
+    "            all_results.append(result)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Erro no arquivo {file_path}: {e}\")\n",
+    "\n",
+    "# Concatenando todos os resultados\n",
+    "final_result = pd.concat(all_results, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Agrupando os resultados por número de CARs e somando a área total\n",
+    "aggregated_results = final_result.groupby('num_cars')['area'].sum().reset_index()\n",
+    "aggregated_results.area.sum()\n",
+    "# Formatando a área para exibição legível\n",
+    "aggregated_results['area'] = aggregated_results['area'].apply(lambda x: f\"{x:,.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'CREATE TABLE split.split (id integer, id_layer text[], id_feature integer[], geometry geometry(polygon, 4674))'"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "create_query=f\"CREATE TABLE split.split (id integer, id_layer text[], id_feature integer[], geometry geometry(polygon, 4674))\"\n",
+    "create_query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with engine.connect() as conn:\n",
+    "    with conn.begin():\n",
+    "        r=conn.execute(text(create_query))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>id_layer</th>\n",
+       "      <th>id_feature</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>[GRID, CAR, CAR]</td>\n",
+       "      <td>[5555, 6127901, 6109499]</td>\n",
+       "      <td>POLYGON ((-51.25268 -9.97893, -51.25268 -9.978...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>[GRID, CAR]</td>\n",
+       "      <td>[5555, 6109499]</td>\n",
+       "      <td>POLYGON ((-51.25268 -9.97893, -51.25268 -9.978...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>[GRID, CAR]</td>\n",
+       "      <td>[5555, 6127901]</td>\n",
+       "      <td>POLYGON ((-51.25268 -9.97893, -51.25191 -9.982...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>[GRID, CAR]</td>\n",
+       "      <td>[5555, 6109499]</td>\n",
+       "      <td>POLYGON ((-51.25477 -9.98972, -51.25477 -9.989...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>[GRID, CAR, CAR]</td>\n",
+       "      <td>[5555, 6026998, 6127901]</td>\n",
+       "      <td>POLYGON ((-51.25477 -9.98972, -51.25476 -9.989...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id          id_layer                id_feature  \\\n",
+       "0   1  [GRID, CAR, CAR]  [5555, 6127901, 6109499]   \n",
+       "1   2       [GRID, CAR]           [5555, 6109499]   \n",
+       "2   3       [GRID, CAR]           [5555, 6127901]   \n",
+       "3   4       [GRID, CAR]           [5555, 6109499]   \n",
+       "4   5  [GRID, CAR, CAR]  [5555, 6026998, 6127901]   \n",
+       "\n",
+       "                                            geometry  \n",
+       "0  POLYGON ((-51.25268 -9.97893, -51.25268 -9.978...  \n",
+       "1  POLYGON ((-51.25268 -9.97893, -51.25268 -9.978...  \n",
+       "2  POLYGON ((-51.25268 -9.97893, -51.25191 -9.982...  \n",
+       "3  POLYGON ((-51.25477 -9.98972, -51.25477 -9.989...  \n",
+       "4  POLYGON ((-51.25477 -9.98972, -51.25476 -9.989...  "
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdf = gpd.read_parquet('/home/pedro/Documents/GIT_WORKSPACE/split_offdb/outputs/split_5555.parquet')\n",
+    "gdf=gdf[['id', 'id_layer', 'id_feature', 'geometry']]\n",
+    "gdf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def format_array(column):\n",
+    "    \"\"\"\n",
+    "    Converte valores de uma coluna para o formato de array do PostgreSQL.\n",
+    "    \"\"\"\n",
+    "    return column.apply(lambda x: '{' + ','.join(map(str, x)) + '}' if isinstance(x, np.ndarray) else None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>id_layer</th>\n",
+       "      <th>id_feature</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>{GRID,CAR,CAR}</td>\n",
+       "      <td>{5555,6127901,6109499}</td>\n",
+       "      <td>POLYGON ((-51.25268 -9.97893, -51.25268 -9.978...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>{GRID,CAR}</td>\n",
+       "      <td>{5555,6109499}</td>\n",
+       "      <td>POLYGON ((-51.25268 -9.97893, -51.25268 -9.978...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>{GRID,CAR}</td>\n",
+       "      <td>{5555,6127901}</td>\n",
+       "      <td>POLYGON ((-51.25268 -9.97893, -51.25191 -9.982...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>{GRID,CAR}</td>\n",
+       "      <td>{5555,6109499}</td>\n",
+       "      <td>POLYGON ((-51.25477 -9.98972, -51.25477 -9.989...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>{GRID,CAR,CAR}</td>\n",
+       "      <td>{5555,6026998,6127901}</td>\n",
+       "      <td>POLYGON ((-51.25477 -9.98972, -51.25476 -9.989...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id        id_layer              id_feature  \\\n",
+       "0   1  {GRID,CAR,CAR}  {5555,6127901,6109499}   \n",
+       "1   2      {GRID,CAR}          {5555,6109499}   \n",
+       "2   3      {GRID,CAR}          {5555,6127901}   \n",
+       "3   4      {GRID,CAR}          {5555,6109499}   \n",
+       "4   5  {GRID,CAR,CAR}  {5555,6026998,6127901}   \n",
+       "\n",
+       "                                            geometry  \n",
+       "0  POLYGON ((-51.25268 -9.97893, -51.25268 -9.978...  \n",
+       "1  POLYGON ((-51.25268 -9.97893, -51.25268 -9.978...  \n",
+       "2  POLYGON ((-51.25268 -9.97893, -51.25191 -9.982...  \n",
+       "3  POLYGON ((-51.25477 -9.98972, -51.25477 -9.989...  \n",
+       "4  POLYGON ((-51.25477 -9.98972, -51.25476 -9.989...  "
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Aplicando a função\n",
+    "gdf['id_layer'] = format_array(gdf['id_layer'])\n",
+    "gdf['id_feature'] = format_array(gdf['id_feature'])\n",
+    "gdf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "gdf.to_postgis(\n",
+    "    name='split',\n",
+    "    con=engine,\n",
+    "    schema='split',\n",
+    "    if_exists=\"append\",\n",
+    "    index=False\n",
+    ")"
    ]
   },
   {
