--- a/dev/intersect.ipynb
+++ b/dev/intersect.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sqlite3\n",
-    "import geopandas as gpd"
+    "import geopandas as gpd\n",
+    "import pandas as pd"
    ]
   },
   {
